Fix CSS z-index bugs

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,7 +6,6 @@
 header {
     border-bottom: 1px solid #DDD;
     position: sticky;
-    z-index: 100;
     top: 0;
     background-color: #FFF;
 }
